Fix 'text-wrap' doesn't exist

--- a/source/styling/index.css
+++ b/source/styling/index.css
@@ -49,7 +49,6 @@ button:hover {
 }
 
 #newNote {
-  text-wrap: nowrap;
   height: fit-content;
   font-size: 2em;
 }
